# LiteReader

./: .LiteReader.md  EPUB_ENGINE_DESIGN.md  README.md  build.gradle.kts  gradle.properties
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/litereader/: MainActivity.kt
app/src/main/java/com/example/litereader/data/api/: BookSource.kt  LibgenBookSource.kt
app/src/main/java/com/example/litereader/data/local/: BookDatabase.kt  ReaderSettingsDataStore.kt
app/src/main/java/com/example/litereader/data/repository/: BookRepository.kt
app/src/main/java/com/example/litereader/domain/model/: Book.kt  Chapter.kt  ReaderTheme.kt
app/src/main/java/com/example/litereader/reader/: BookCacheManager.kt  EpubPaginator.kt  EpubParser.kt  PdfParser.kt  ReaderScreen.kt  RustEpubEngine.kt  RustPdfEngine.kt  RustTxtEngine.kt  TextLayoutEngine.kt  TxtParser.kt
app/src/main/java/com/example/litereader/ui/component/: BookCover.kt
app/src/main/java/com/example/litereader/ui/screen/: HomeScreen.kt  SearchScreen.kt  SettingsScreen.kt
app/src/main/java/com/example/litereader/ui/theme/: Theme.kt
app/src/main/java/com/example/litereader/ui/viewmodel/: BookViewModel.kt  ReaderViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
gradle/: libs.versions.toml
rust-reader/: Cargo.toml
rust-reader/src/: cache.rs  chapter.rs  epub_engine.rs  image.rs  lib.rs  pdf_engine.rs  resource.rs  txt_engine.rs
