[package]
name = "litereader"
version = "0.1.0"
edition = "2021"

[lib]
name = "litereader"
crate-type = ["cdylib"]

[dependencies]
epub = "2"
pdfium-render = { version = "0.8", features = ["thread_safe"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lru = "0.12"
jni = "0.21"
encoding_rs = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
